--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^4.25.1",
     "@clerk/themes": "^1.7.6",
+    "axios": "^1.5.0",
     "gsap": "^3.12.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "sort-by": "^1.2.0"
   },
